# tactile-manibot

./: .gitignore  README.md  pyproject.toml
tactile_data/ur5_tacpad_1/surface_zRxy_shear/regress_pose_zRxy/simple_cnn/: best_model.pth  learning_params.json  model_label_params.json  sensor_image_params.json  val_pred_targ_err.pkl
tactile_data/ur5_tacpad_1/surface_zRxy_shear/regress_pose_zRxy/simple_cnn/tensorboard_runs/: events.out.tfevents.1758274483.IT047732.9640.0
tactile_data/ur5_tacpad_1/surface_zRxy_shear/regress_pose_zRxy/simple_cnn/tensorboard_runs/metrics_accuracy/train/: events.out.tfevents.1758274619.IT047732.9640.3
tactile_data/ur5_tacpad_1/surface_zRxy_shear/regress_pose_zRxy/simple_cnn/tensorboard_runs/metrics_accuracy/val/: events.out.tfevents.1758274619.IT047732.9640.4
tactile_data/ur5_tacpad_1/surface_zRxy_shear/regress_pose_zRxy/simple_cnn/tensorboard_runs/metrics_learning_rate/: events.out.tfevents.1758274619.IT047732.9640.5
tactile_data/ur5_tacpad_1/surface_zRxy_shear/regress_pose_zRxy/simple_cnn/tensorboard_runs/metrics_loss/train/: events.out.tfevents.1758274618.IT047732.9640.1
tactile_data/ur5_tacpad_1/surface_zRxy_shear/regress_pose_zRxy/simple_cnn/tensorboard_runs/metrics_loss/val/: events.out.tfevents.1758274619.IT047732.9640.2
tactile_data/ur5_tacpad_1/surface_zRxy_shear/train/: collect_params.json  env_params.json  targets.csv
tactile_data/ur5_tacpad_1/surface_zRxy_shear/val/: collect_params.json  sensor_image_params.json  targets.csv
tg3/: demo_predict.py
tg3/utils/: NNmodels.py  contact_model.py  labeller.py  ros2_handler.py  transform_image.py
