[project]
name = "tg3"
version = "0.0.1"
description = "Tactile manibot"
readme = "README.md"
requires-python = "==3.10.*"

license = { text = "MIT" } 
authors = [
  { name = "Nathan Lepora, Ertug Ovur", email = "n.lepora@bristol.ac.uk" },
]

dependencies = [
    "pandas",
    "numpy",#<=1.21.2",
    "opencv-python>=4.5.1",
    "scikit-learn",
    "scikit-image>=0.19.3",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tactile-manibot"]